Fix - Fixed the layout of the canvas page so buttons and prediction are not cut off

--- a/src/main/resources/css/canvas.css
+++ b/src/main/resources/css/canvas.css
@@ -23,15 +23,7 @@
 	-fx-background-color: #FFEBCD;
 }
 
-#title{
-    -fx-font-weight: bold;
-    -fx-font-family: papyrus;
-    -fx-font-size:20px;
-}
-
 #resultLabel{
-    -fx-font-weight: bold;
-    -fx-font-family: papyrus;
     -fx-font-size:17px;
 }
 
@@ -47,5 +39,16 @@
 	-fx-border-color:black;
 	-fx-effect: dropshadow(gaussian, rgba(0,0,0.4), 4, 0.0, 0, 1);
 	-fx-background-radius: 18;
+}
+
+#predictionLabel {
+	-fx-background-color:white;
+	-fx-border-color:black;
+	-fx-effect: dropshadow(gaussian, rgba(0,0,0.4), 4, 0.0, 0, 1);
+	-fx-background-radius: 18;
+}
+
+#predictionBox1 {
+	-fx-font-size:13px;
 }
 
